Fix map loading, admin location selection on mobile (#74)

--- a/src/components/admin/SelectionMap.css
+++ b/src/components/admin/SelectionMap.css
@@ -2,6 +2,7 @@
     .SelectionMap {
         width: 100%;
         height: 200px;
+        position: relative;
     }
 }
 
